sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  for (i <- getNombreValeurs-2 to 0) {
    for(j <- 0 to i) {
      if (!plusPetit(i,i+1)) {
        Swap = true
        echange(i,i+1)
      }
    }
	}
}